@@ -47,6 +47,8 @@ jobs:
     - env: CIP_TAG=5.8.9
     - env: CIP_TAG=5.8.8
     - env: CIP_TAG=5.8.4
+  allow_failures:
+    - env: CIP_TAG=5.10.0
 
 branches:
   only:
